--- a/frontend/src/app/menu/menu.page.scss
+++ b/frontend/src/app/menu/menu.page.scss
@@ -433,6 +433,6 @@ ion-content {
 }
 
 .spacer { 
-  height: 120px; 
+  height: 20px; 
 }
 
